--- a/.devcontainer/dot-config.json
+++ b/.devcontainer/dot-config.json
@@ -15,7 +15,6 @@
   "workspaces": {
     "../git/attributes": ".gitattributes",
     "../git/ignore": ".gitignore",
-    "../../package.json": "package.json",
-    "pnpm-workspace.yaml": "pnpm-workspace.yaml"
+    "package.json": "package.json"
   }
 }
