--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-flat-config-gitignore": "^1.3.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-unicorn": "^53.0.0",
     "eslint-plugin-vitest": "^0.5.4",
@@ -35,7 +36,8 @@
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
     "vite-node": "^1.6.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
