--- a/create-devcontainer/package.json
+++ b/create-devcontainer/package.json
@@ -19,9 +19,9 @@
   },
   "bin": "./dist/index.js",
   "dependencies": {
-    "@types/pacote": "^11.1.8",
-    "@types/semver": "^7.5.8",
+    "cspell-lib": "^8.8.1",
     "dedent": "^1.5.3",
+    "default-composer": "^0.6.0",
     "jsonc-parser": "^3.2.1",
     "node-fetch": "^3.3.2",
     "oci-registry-client": "^0.2.0",
@@ -32,7 +32,9 @@
     "type-fest": "^4.18.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.11"
+    "@types/node": "^20.12.11",
+    "@types/pacote": "^11.1.8",
+    "@types/semver": "^7.5.8"
   },
   "engines": {
     "node": ">=20"
