--- a/create-devcontainer/templates/typescript/package.json
+++ b/create-devcontainer/templates/typescript/package.json
@@ -5,6 +5,7 @@
     "@commander-js/extra-typings": "^12.1.0",
     "@eslint/js": "^9.2.0",
     "@tsconfig/node20": "^20.1.4",
+    "commander": "~12.1.0",
     "cspell": "^8.8.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -24,7 +25,6 @@
     "@types/eslint": "^8.56.10",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.12.11",
-    "commander": "~12.1.0"
+    "@types/node": "^20.12.11"
   }
 }
