--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "vite-node scripts/build.ts",
@@ -15,6 +16,7 @@
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.2.0",
     "@tsconfig/node20": "^20.1.4",
+    "commander": "~12.1.0",
     "cspell": "^8.8.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -26,9 +28,12 @@
     "eslint-plugin-vitest": "^0.5.4",
     "execa": "^9.0.2",
     "glob": "^10.3.15",
+    "isomorphic-git": "^1.25.10",
     "prettier": "^3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
+    "semver": "^7.6.2",
     "syncpack": "^12.3.2",
+    "type-fest": "^4.18.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
@@ -42,6 +47,9 @@
     "@types/eslint__eslintrc": "^2.1.1",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.12.11",
-    "commander": "~12.1.0"
+    "@types/semver": "^7.5.8"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
