--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "vite-node scripts/build.ts",
     "fix": "vite-node scripts/fix.ts",
+    "installPackage": "vite-node scripts/installPackage.ts",
     "lint": "vite-node scripts/lint.ts",
     "publish": "vite-node scripts/publish.ts",
     "restore": "vite-node scripts/restore.ts",
