--- a/setup/package.json
+++ b/setup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-devcontainer",
+  "name": "setup",
   "version": "0.0.0",
   "description": "TODO",
   "keywords": [
@@ -9,7 +9,9 @@
     "setup"
   ],
   "type": "module",
-  "bin": "./index.js",
+  "bin": {
+    "create-devcontainer": "./index.js"
+  },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
     "commander": "~12.1.0",
