--- a/.config/appveyor/publish.yml
+++ b/.config/appveyor/publish.yml
@@ -13,6 +13,8 @@ build_script:
       npm install --global @devcontainers/cli
 
       devcontainer build --workspace-folder .
+
+      devcontainer build --workspace-folder . pnpm build
 deploy_script:
   - sh: >-
       set -e
