--- a/.config/appveyor/main.yml
+++ b/.config/appveyor/main.yml
@@ -11,12 +11,12 @@ build_script:
       npm install --global @devcontainers/cli
 
       devcontainer build --workspace-folder .
-
-      devcontainer build --workspace-folder . pnpm build
 test_script:
   - sh: >-
       set -e
 
       devcontainer up --workspace-folder .
+
+      devcontainer exec --workspace-folder . pnpm build
 
       devcontainer exec --workspace-folder . pnpm lint
