--- a/.config/prettier/.prettierrc.json
+++ b/.config/prettier/.prettierrc.json
@@ -1,4 +1,5 @@
 {
   "printWidth": 120,
-  "plugins": ["prettier-plugin-packagejson"]
+  "plugins": ["prettier-plugin-packagejson", "@prettier/plugin-xml"],
+  "xmlWhitespaceSensitivity": "ignore"
 }
