--- a/.devcontainer/dot-config.json
+++ b/.devcontainer/dot-config.json
@@ -3,19 +3,26 @@
     "attributes": "/home/dev/.config/git/attributes",
     "ignore": "/home/dev/.config/git/ignore"
   },
-  "cspell": {
-    "cspell.json": "cspell.json"
-  },
   "pnpm": {
     "rc": "/home/dev/.config/pnpm/rc"
   },
   "prettier": {
     ".prettierrc.json": ".prettierrc.json"
   },
+  "cspell": {
+    "cspell.json": "cspell.json"
+  },
+  "csharpier": {
+    ".csharpierrc.json": ".csharpierrc.json"
+  },
+  "dotnet": {
+    "tools.json": ".config/dotnet-tools.json"
+  },
   "workspaces": {
     "../git/attributes": ".gitattributes",
     "../git/ignore": ".gitignore",
     "../../package.json": "package.json",
-    "pnpm-workspace.yaml": "pnpm-workspace.yaml"
+    "pnpm-workspace.yaml": "pnpm-workspace.yaml",
+    "Directory.Build.props": "Directory.Build.props"
   }
 }
