--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commander-js/extra-typings": "^12.1.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.3.0",
+    "@prettier/plugin-xml": "^3.4.1",
     "@tsconfig/node20": "^20.1.4",
     "commander": "~12.1.0",
     "cspell": "^8.8.3",
@@ -32,6 +33,7 @@
     "eslint-plugin-vitest": "^0.5.4",
     "execa": "^9.1.0",
     "glob": "^10.4.1",
+    "globals": "^15.3.0",
     "isomorphic-git": "^1.25.10",
     "prettier": "^3.2.5",
     "prettier-plugin-packagejson": "^2.5.0",
