--- a/setup/package.json
+++ b/setup/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
+    "@prettier/plugin-xml": "^3.4.1",
     "commander": "~12.1.0",
     "cspell-lib": "^8.8.3",
     "dedent": "^1.5.3",
     "default-composer": "^0.6.0",
+    "fast-xml-parser": "^4.4.0",
     "jsonc-parser": "^3.2.1",
     "lodash-es": "^4.17.21",
     "node-fetch": "^3.3.2",
