--- a/setup/templates/csharp/.devcontainer/devcontainer.json
+++ b/setup/templates/csharp/.devcontainer/devcontainer.json
@@ -1,9 +1,9 @@
 // spell-checker:ignore dotnettools
 {
+  "features": {
+    "ghcr.io/devcontainers/features/dotnet": {}
+  },
   "customizations": {
-    "features": {
-      "ghcr.io/devcontainers/features/dotnet:2": { "version": "8.0" }
-    },
     "vscode": {
       "extensions": ["ms-dotnettools.csharp", "csharpier.csharpier-vscode"],
       "settings": {
