--- a/.config/prettier/.prettierrc.json
+++ b/.config/prettier/.prettierrc.json
@@ -1,13 +1,9 @@
 {
   "printWidth": 120,
-  "plugins": ["prettier-plugin-packagejson", "@prettier/plugin-xml"],
+  "plugins": ["prettier-plugin-packagejson", "@prettier/plugin-xml", "prettier-plugin-ini"],
   "xmlWhitespaceSensitivity": "ignore",
   "overrides": [
-    {
-      "files": "app.manifest",
-      "options": {
-        "parser": "xml"
-      }
-    }
+    { "files": "app.manifest", "options": { "parser": "xml" } },
+    { "files": "*.globalconfig", "options": { "parser": "ini" } }
   ]
 }
