--- a/setup/package.json
+++ b/setup/package.json
@@ -26,6 +26,7 @@
     "oci-registry-client": "^0.2.0",
     "pacote": "^18.0.6",
     "prettier": "^3.2.5",
+    "prettier-plugin-ini": "^1.2.0",
     "prettier-plugin-packagejson": "^2.5.0",
     "semver": "^7.6.2",
     "type-fest": "^4.18.2",
