--- a/package.json
+++ b/package.json
@@ -12,48 +12,45 @@
     "test": "vite-node scripts/test.ts",
     "watch": "vite-node scripts/watch.ts"
   },
-  "resolutions": {
-    "eslint>file-entry-cache": "^8.0.0"
-  },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.3.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
     "@prettier/plugin-xml": "^3.4.1",
-    "@tsconfig/node20": "^20.1.4",
+    "@tsconfig/node22": "^22.0.0",
+    "@vitest/eslint-plugin": "^1.1.16",
     "commander": "~12.1.0",
-    "cspell": "^8.8.3",
-    "eslint": "^8.57.0",
+    "cspell": "^8.16.1",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-flat-config-gitignore": "^2.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.7.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "eslint-plugin-unicorn": "^53.0.0",
-    "eslint-plugin-vitest": "^0.5.4",
-    "execa": "^9.1.0",
-    "glob": "^10.4.1",
-    "globals": "^15.3.0",
-    "isomorphic-git": "^1.25.10",
-    "prettier": "^3.2.5",
-    "prettier-plugin-ini": "^1.2.0",
-    "prettier-plugin-packagejson": "^2.5.0",
-    "semver": "^7.6.2",
-    "syncpack": "^12.3.2",
-    "type-fest": "^4.18.2",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.10.0",
-    "vite": "^5.2.11",
-    "vite-node": "^1.6.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.15.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "execa": "^9.5.2",
+    "glob": "^11.0.0",
+    "globals": "^15.13.0",
+    "isomorphic-git": "1.27.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-ini": "^1.3.0",
+    "prettier-plugin-packagejson": "^2.5.6",
+    "semver": "^7.6.3",
+    "syncpack": "^13.0.0",
+    "type-fest": "^4.30.1",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.18.0",
+    "vite": "^6.0.3",
+    "vite-node": "^2.1.8",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
+    "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint__eslintrc": "^2.1.1",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.12.12",
+    "@types/node": "^22.10.2",
     "@types/semver": "^7.5.8"
   },
   "engines": {
