--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,13 +42,13 @@
         },
         "eslint.runtime": "/usr/local/bin/node",
         "eslint.workingDirectories": ["/workspaces"],
-        "eslint.experimental.useFlatConfig": true,
         "typescript.preferences.importModuleSpecifier": "non-relative",
         "typescript.preferences.includePackageJsonAutoImports": "on",
         "typescript.tsdk": "/workspaces/node_modules/typescript/lib",
         "[csharp]": {
           "editor.defaultFormatter": "csharpier.csharpier-vscode"
-        }
+        },
+        "vitest.rootConfig": "vite.config.ts"
       }
     }
   },
