Update versions and config

--- a/.devcontainer/dot-config.json
+++ b/.devcontainer/dot-config.json
@@ -12,6 +12,9 @@
   "cspell": {
     "cspell.json": "cspell.json"
   },
+  "eslint": {
+    "eslint.config.ts": "eslint.config.ts"
+  },
   "csharpier": {
     ".csharpierrc.json": ".csharpierrc.json"
   },
