--- a/.config/workspaces/pnpm-workspace.yaml
+++ b/.config/workspaces/pnpm-workspace.yaml
@@ -1,3 +1,3 @@
 packages:
-  - "devcontainer-config-setup/**"
-  - "!devcontainer-config-setup/**/dist/"
+  - "devcontainer-config-setup/*"
+  - "devcontainer-config-setup/setup/templates/*"
