--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -8,7 +8,7 @@ services:
     init: true
     volumes:
       - WORKSPACES:${WORKSPACES}
-      - ..:${WORKSPACES}/${COMPOSE_PROJECT_NAME}
+      - ..:${WORKSPACES}/devcontainer-config-setup
       - XDG_CONFIG_HOME:${XDG_CONFIG_HOME}
       - XDG_CACHE_HOME:${XDG_CACHE_HOME}
       - XDG_DATA_HOME:${XDG_DATA_HOME}
