--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,14 @@
 // spell-checker:ignore esbenp azuretools dbaeumer dotnettools
 {
   "name": "devcontainer-config-setup",
-  "dockerComposeFile": "docker-compose.yml",
+  "dockerComposeFile": "compose.yaml",
   "service": "devcontainer",
   "remoteUser": "dev",
   "overrideCommand": true,
   "workspaceFolder": "/workspaces/devcontainer-config-setup",
   "features": {
     "ghcr.io/devcontainer-config/features/user-init:2": {},
-    "ghcr.io/devcontainer-config/features/dot-config:2": {},
+    "ghcr.io/devcontainer-config/features/dot-config:3": {},
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/devcontainers/features/dotnet:2": { "version": "8.0" }
   },
@@ -52,6 +52,5 @@
       }
     }
   },
-  "onCreateCommand": "pnpm install && pnpm restore",
-  "postAttachCommand": "pnpm watch --detach"
+  "onCreateCommand": "pnpm install && pnpm restore || true"
 }
