--- a/package.json
+++ b/package.json
@@ -3,57 +3,62 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "build": "vite-node scripts/build.ts",
-    "fix": "vite-node scripts/fix.ts",
-    "installPackage": "vite-node scripts/installPackage.ts",
-    "lint": "vite-node scripts/lint.ts",
-    "publish": "vite-node scripts/publish.ts",
-    "restore": "vite-node scripts/restore.ts",
-    "test": "vite-node scripts/test.ts",
-    "watch": "vite-node scripts/watch.ts"
+    "build": "pnpm node scripts/build.ts",
+    "fix": "pnpm node scripts/fix.ts",
+    "installPackage": "pnpm node scripts/installPackage.ts",
+    "lint": "pnpm node scripts/lint.ts",
+    "node": "vite-node scripts/node.ts",
+    "publish": "pnpm node scripts/publish.ts",
+    "restore": "pnpm node scripts/restore.ts",
+    "test": "pnpm node scripts/test.ts",
+    "update": "pnpm node scripts/update.ts"
   },
   "dependencies": {
-    "@commander-js/extra-typings": "^12.1.0",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.16.0",
+    "@commander-js/extra-typings": "^13.1.0",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
     "@prettier/plugin-xml": "^3.4.1",
     "@tsconfig/node22": "^22.0.0",
-    "@vitest/eslint-plugin": "^1.1.16",
-    "commander": "~12.1.0",
-    "cspell": "^8.16.1",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-flat-config-gitignore": "^2.0.0",
+    "@vitest/eslint-plugin": "^1.1.37",
+    "commander": "~13.1.0",
+    "cspell": "^8.17.5",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-flat-config-gitignore": "^3.0.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-n": "^17.15.0",
+    "eslint-plugin-n": "^17.16.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-unicorn": "^56.0.1",
+    "eslint-plugin-unicorn": "^57.0.0",
     "execa": "^9.5.2",
-    "glob": "^11.0.0",
-    "globals": "^15.13.0",
-    "isomorphic-git": "1.27.1",
-    "prettier": "^3.4.2",
+    "glob": "^11.0.1",
+    "globals": "^16.0.0",
+    "isomorphic-git": "1.29.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-ini": "^1.3.0",
-    "prettier-plugin-packagejson": "^2.5.6",
-    "semver": "^7.6.3",
-    "syncpack": "^13.0.0",
-    "type-fest": "^4.30.1",
-    "typescript": "~5.6.3",
-    "typescript-eslint": "^8.18.0",
-    "vite": "^6.0.3",
-    "vite-node": "^2.1.8",
+    "prettier-plugin-packagejson": "^2.5.10",
+    "semver": "^7.7.1",
+    "syncpack": "^13.0.3",
+    "type-fest": "^4.37.0",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.2",
+    "vite-node": "^3.0.8",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.8"
+    "vitest": "^3.0.8"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint__eslintrc": "^2.1.2",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.13.10",
     "@types/semver": "^7.5.8"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
+  },
+  "pnpm": {
+    "overrides": {
+      "syncpack>@effect/schema": "npm:effect@^3.13.11"
+    }
   }
 }
