--- a/setup/templates/typescript/package.json
+++ b/setup/templates/typescript/package.json
@@ -2,30 +2,30 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@commander-js/extra-typings": "^12.1.0",
-    "@eslint/js": "^9.16.0",
+    "@commander-js/extra-typings": "^13.1.0",
+    "@eslint/js": "^9.22.0",
     "@tsconfig/node22": "^22.0.0",
-    "commander": "~12.1.0",
-    "cspell": "^8.16.1",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-flat-config-gitignore": "^2.0.0",
+    "commander": "~13.1.0",
+    "cspell": "^8.17.5",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-flat-config-gitignore": "^3.0.0",
     "execa": "^9.5.2",
-    "glob": "^11.0.0",
-    "globals": "^15.13.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-packagejson": "^2.5.6",
-    "syncpack": "^13.0.0",
-    "typescript": "~5.6.3",
-    "typescript-eslint": "^8.18.0",
-    "vite": "^6.0.3",
-    "vite-node": "^2.1.8",
+    "glob": "^11.0.1",
+    "globals": "^16.0.0",
+    "jiti": "^2.4.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.10",
+    "syncpack": "^13.0.3",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.2.2",
+    "vite-node": "^3.0.8",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.1",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.10.2"
+    "@types/node": "^22.13.10"
   }
 }
