--- a/setup/templates/csharp/.devcontainer/dot-config.json
+++ b/setup/templates/csharp/.devcontainer/dot-config.json
@@ -1,6 +1,7 @@
 {
   "csharpier": {
-    ".csharpierrc.json": ".csharpierrc.json"
+    ".csharpierrc.json": ".csharpierrc.json",
+    ".csharpierignore": ".csharpierignore"
   },
   "dotnet": {
     "tools.json": ".config/dotnet-tools.json"
