--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm vite-node scripts/build.ts",
+    "buildx": "pnpm vite-node scripts/buildx.ts",
     "fix": "pnpm vite-node scripts/fix.ts",
     "installPackage": "pnpm vite-node scripts/installPackage.ts",
     "lint": "pnpm vite-node scripts/lint.ts",
