--- a/setup/package.json
+++ b/setup/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-ini": "^1.3.0",
     "prettier-plugin-packagejson": "^2.5.19",
+    "prettier-plugin-sh": "^0.18.0",
     "semver": "^7.7.3",
     "type-fest": "^5.2.0",
     "write-file-atomic": "^7.0.0"
