--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,28 @@
   "name": "devcontainer-config-setup",
   "dockerComposeFile": "compose.yaml",
   "service": "devcontainer",
+  "containerUser": "dev",
   "remoteUser": "dev",
   "overrideCommand": true,
-  "workspaceFolder": "/workspaces/devcontainer-config-setup",
+  "workspaceFolder": "/workspaces/setup",
   "features": {
-    "ghcr.io/devcontainer-config/features/user-init:2": {},
-    "ghcr.io/devcontainer-config/features/dot-config:3": {},
+    "ghcr.io/devcontainer-config/features/user-init:3.0.0-alpha1": {},
+    "ghcr.io/devcontainer-config/features/dot-config:4.0.0-alpha1": {},
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/devcontainers/features/dotnet:2": { "version": "10.0" }
   },
+  "mounts": [
+    {
+      "type": "bind",
+      "source": "${localWorkspaceFolder}",
+      "target": "/workspaces/setup"
+    },
+    {
+      "type": "volume",
+      "source": "WORKSPACES",
+      "target": "/workspaces"
+    }
+  ],
   "customizations": {
     "vscode": {
       "extensions": [
@@ -44,8 +57,7 @@
         "typescript.tsdk": "/workspaces/node_modules/typescript/lib",
         "[csharp]": {
           "editor.defaultFormatter": "csharpier.csharpier-vscode"
-        },
-        "vitest.rootConfig": "vite.config.ts"
+        }
       }
     }
   },
