--- a/setup/templates/base/.devcontainer/dot-config.json
+++ b/setup/templates/base/.devcontainer/dot-config.json
@@ -1,10 +1,10 @@
 {
   "git": {
-    "attributes": "/home/${remoteUser}/.config/git/attributes",
-    "ignore": "/home/${remoteUser}/.config/git/ignore"
+    "attributes": "/etc/devcontainer-config/git/attributes",
+    "ignore": "/etc/devcontainer-config/git/ignore"
   },
   "pnpm": {
-    "rc": "/home/${remoteUser}/.config/pnpm/rc"
+    "rc": "/etc/devcontainer-config/pnpm/rc"
   },
   "prettier": {
     ".prettierrc.json": ".prettierrc.json"
