add missing compose.yaml file overwrite to C# template

--- a/.config/workspaces/Directory.Build.props
+++ b/.config/workspaces/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <ArtifactsPath>$(MSBuildThisFileDirectory)artifacts</ArtifactsPath>
+    <ArtifactsPath>$(MSBuildThisFileDirectory)artifacts/dotnet</ArtifactsPath>
   </PropertyGroup>
 
   <ItemGroup>
